@@ -14,7 +14,7 @@ info_TEXINFOS = global.texi
 
 global_TEXINFOS = fdl.texi reference.texi define.texi faq.texi \
 	global.ref gtags.ref htags.ref htags-server.ref gozilla.ref \
-	gtags-cscope.ref globash.ref
+	gtags-cscope.ref globash.ref gtags.conf.ref
 
 EXTRA_DIST = texinfo.tex
 
